# College_prices_senior_project

./: API_Call.py  API_test.py  Flask_Setup.py  README.md  WebFramework.py  forms.py  keys  keys.pub  pyproject.toml  scripts.py  styles.css  test.py
static/css/: style.css
templates/: Main_Page.html  college_search.html  index.html  result.html  search_results.html
tests/: test_Flask_Setup_Test
